# OpenWorld-MethaneMonitoring

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  Plan.MD  README.md  config.example.toml  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: index.md
examples/: sample.csv  sample.json
openworld_methane/: __init__.py  cli.py  config.py  models.py
openworld_methane/alerts/: __init__.py  email.py  slack.py
openworld_methane/analytics/: __init__.py  aggregate.py  anomaly.py
openworld_methane/compliance/: __init__.py  rules.py
openworld_methane/core/: __init__.py  logging.py  orchestrator.py  security.py  timeutil.py  units.py
openworld_methane/dashboards/: __init__.py  api.py  ascii.py  http.py
openworld_methane/data_adapters/: __init__.py  csv_adapter.py  json_adapter.py
openworld_methane/persistence/: __init__.py  indexed_jsonl.py  jsonl.py  store.py
openworld_methane/reporting/: __init__.py  report.py
tests/: test_adapters.py  test_alerts.py  test_analytics.py  test_cli.py  test_compliance.py  test_config_validation.py  test_dashboard_and_reporting.py  test_http_dashboard.py  test_indexed_jsonl.py  test_jsonl.py  test_logging.py  test_persistence.py  test_security.py  test_timeutil.py  test_units.py
