[project]
name = "openworld-methane-monitoring"
version = "0.2.0"
description = "OpenWorld Methane Monitoring: ingest, analyze, and report methane emissions with CLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Nik Jois", email = "nikjois@llamasearch.ai" }]
license = { text = "Proprietary" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis"
]

dependencies = [
  # Core
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  # Optional server
  "fastapi>=0.111,<1",
  "uvicorn>=0.30,<1",
  # Python<3.11 tomllib backport
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4,<9",
  "pytest-cov>=4.1,<6",
  "ruff>=0.5.0,<1",
  "black>=24.4,<25",
  "mypy>=1.8,<2",
]

[project.urls]
Homepage = "https://example.com/openworld-methane-monitoring"

[project.scripts]
owm = "openworld_methane.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
lint.select = ["E", "F", "I", "W", "UP", "B", "N", "A", "C4"]
lint.ignore = ["B905", "E501"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
